# sinkhorn_jax

./: README.md  main.py  pyproject.toml  sinkhorn.py
