[tool.poetry]
name = "sinkhorn-jax"
version = "0.1.0"
description = ""
authors = ["Emile-Aquila <tmk8oakan6130@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.31"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
